# aioli-openapi

./: README.md  pyproject.toml
aioli_openapi/: __init__.py  _apispec.py  controller.py  schema.py  service.py
