[tool.poetry]
name = "aioli-openapi"
version = "0.1.0"
description = ""
authors = ["Robert Wikman <rbw@vault13.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
aioli = { git = "https://github.com/aioli-framework/aioli.git", branch = "devel" }
apispec = "^2.0.1"

[tool.poetry.dev-dependencies]
twine = "^1.13"
sphinx = "^2.1.1"
# aioli_sphinx_theme = { git = "https://github.com/aioli-framework/aioli-sphinx-theme.git", branch = "master" }
sphinxcontrib-httpdomain = "^1.7.0"
pytest = "^4.4.0"
pytest-cov = "^2.7.1"
autoflake = "^1.3"
codecov = "^2.0.15"
black = { version = "^19.3b0", allows-prereleases = true }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
